--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="hero">
             <!-- Reproductor de video -->
             <video autoplay muted playsinline loop class="hero__video">
-                <source src="assets/takamine/pexels-artem-podrez-6274261 (1080p) - Trim.mp4" type="video/mp4">
+                <source src="assets/takamine/hero__video.mp4" type="video/mp4">
             </video>
             <!-- Slogan de la página -->
             <div class="hero__heading">
